--- a/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.html
+++ b/src/app/Core/dashboard-seller/product-seller/register-product/register-product.component.html
@@ -105,6 +105,26 @@
       </div>
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col">
+          <label for="weight">وزن محصول</label>
+          <input id="weight" type="text" pInputText
+                 formControlName="weight">
+          <ul class="mt-1 text-right list-inline"
+              *ngFor="let error of errorMessages.weight">
+            <li class="font-small text-danger font-weight-bold list-inline-item"
+                *ngIf="form.get('weight').hasError(error.type)
+                            && (form.get('weight').dirty
+                            || form.get('weight').touched)">
+              {{ error.message }}
+            </li>
+          </ul>
+        </div>
+        <div class="p-field p-col">
+          <label class="d-block">ارسال محصول رایگان است؟  {{form.controls.freeSend.value === true ? 'بله' : 'خیر'}}</label>
+          <p-inputSwitch formControlName="freeSend"></p-inputSwitch>
+        </div>
+      </div>
+      <div class="p-fluid p-formgrid p-grid">
+        <div class="p-field p-col">
           <label for="topText">متن بالای محصول</label>
           <input id="topText" type="text" pInputText
                  formControlName="topText">
@@ -209,7 +229,7 @@
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col">
           <label for="briefFeature">خلاصه ویژگی محصول</label>
-          <p-editor formControlName="briefFeature" id="briefFeature" [style]="{'height':'200px'}"></p-editor>
+          <textarea formControlName="briefFeature" id="briefFeature" rows="5"></textarea>
           <ul class="mt-1 text-right list-inline"
               *ngFor="let error of errorMessages.briefFeature">
             <li class="font-small text-danger font-weight-bold list-inline-item"
@@ -224,27 +244,6 @@
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col">
           <label for="selectedFeature">ویژگی</label>
-
-<!--          <p-dropdown *ngIf="features.length"-->
-<!--                      [options]="features"-->
-<!--                      [(ngModel)]="selectedFeature"-->
-<!--                      id="selectedFeature"-->
-<!--                      [filter]="true"-->
-<!--                      optionLabel="titleFarsi"-->
-<!--                      placeholder="&#45;&#45; انتخاب کنید &#45;&#45;"-->
-<!--                      (onChange)="getFeatureValues($event)">-->
-<!--            <ng-template pTemplate="selectedItem">-->
-<!--              <div class="country-item country-item-value" *ngIf="selectedFeature">-->
-<!--                <div>{{selectedFeature.titleFarsi}}</div>-->
-<!--              </div>-->
-<!--            </ng-template>-->
-<!--            <ng-template let-country pTemplate="item">-->
-<!--              <div class="country-item">-->
-<!--                <div>{{country.value.titleFarsi}}</div>-->
-<!--              </div>-->
-<!--            </ng-template>-->
-<!--          </p-dropdown>-->
-
           <p-dropdown [options]="features" appendTo="body" id="selectedFeature"
                       [(ngModel)]="selectedFeature"
                       optionLabel="titleFarsi"
