--- a/src/app/Layout/all-products/all-products.component.html
+++ b/src/app/Layout/all-products/all-products.component.html
@@ -14,7 +14,7 @@
             class="p-button-danger float-left" routerLink="cart"></button>
   </ng-template>
 </p-dialog>
-
+<p-toast position="center"></p-toast>
 <section class="card-box mt-5">
   <div class="container-fluid" dir="rtl">
     <div class="row justify-content-center">
