--- a/src/app/Layout/best-selling/best-selling.component.html
+++ b/src/app/Layout/best-selling/best-selling.component.html
@@ -12,7 +12,7 @@
 
   </ng-template>
 </p-dialog>
-
+<p-toast position="center"></p-toast>
 <section class="card-box mt-5">
   <div class="container-fluid" dir="rtl">
     <div class="row justify-content-center">
@@ -37,7 +37,7 @@
                       <path d="M14,15h-4v-2h3v-3h2v4C15,14.6,14.6,15,14,15z M13,3h-3V1h4c0.6,0,1,0.4,1,1v4h-2V3z M6,3H3v3H1V2c0-0.6,0.4-1,1-1h4V3zM3,13h3v2H2c-0.6,0-1-0.4-1-1v-4h2V13z"></path>
                     </svg>
                   </button>
-                  <button class="product-card__action product-card__action--wishlist" type="button"
+                  <button (click)="addToWishList(i._id)" class="product-card__action product-card__action--wishlist" type="button"
                           aria-label="Add to wish list">
                     <svg width="16" height="16">
                       <path d="M13.9,8.4l-5.4,5.4c-0.3,0.3-0.7,0.3-1,0L2.1,8.4c-1.5-1.5-1.5-3.8,0-5.3C2.8,2.4,3.8,2,4.8,2s1.9,0.4,2.6,1.1L8,3.7l0.6-0.6C9.3,2.4,10.3,2,11.3,2c1,0,1.9,0.4,2.6,1.1C15.4,4.6,15.4,6.9,13.9,8.4z"></path>
