--- a/src/app/Layout/wishlist/wishlist.component.html
+++ b/src/app/Layout/wishlist/wishlist.component.html
@@ -1,3 +1,17 @@
+<p-dialog  [(visible)]="displayBasic" [style]="{width: '30rem'}" [baseZIndex]="10000" dir="rtl">
+  <p-header>
+    <p  class="mr-3">انجام شد</p>
+  </p-header>
+  <hr style="width: 100%;"/>
+  <p class="text-right text-success mt-2">محصول با موفقیت به سبد خرید اضافه شد</p>
+  <p class="text-right textDialog">برای ثبت نهایی سفارش بر روی دکمه ی مشاهده  سبد خرید کلیک کنید و برای افزودن دیگر محصولات به سبد خرید، بر روی دکمه ی ادامه کلیک کنید.</p>
+  <hr style="margin-bottom: -15px"/>
+  <ng-template pTemplate="footer" >
+    <button pButton pRipple type="button"  (click)="displayBasic=false" label="ادامه"  class="p-button-danger float-left"></button>
+    <button pButton pRipple type="button"  (click)="displayBasic=false" label="مشاهده سبد خرید"  class="p-button-danger float-left" routerLink="/home/cart"></button>
+
+  </ng-template>
+</p-dialog>
 <app-header dir="rtl"></app-header>
 <div class="page-header text-right mt-5" dir="rtl">
   <div class="page-header-container container">
@@ -7,10 +21,11 @@
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
               <a routerLink="/" class="nuxt-link-active">
-              صفحه اصلی
+                صفحه اصلی
               </a>
               <svg xmlns="http://www.w3.org/2000/svg" width="6" height="9" class="breadcrumb-arrow">
-                <path d="M.4 8.8c-.4-.4-.5-1-.1-1.4l3-2.9-3-2.9C-.1 1.2-.1.5.4.2c.4-.3.9-.3 1.3.1L6 4.5 1.6 8.7c-.3.4-.9.4-1.2.1z"></path>
+                <path
+                  d="M.4 8.8c-.4-.4-.5-1-.1-1.4l3-2.9-3-2.9C-.1 1.2-.1.5.4.2c.4-.3.9-.3 1.3.1L6 4.5 1.6 8.7c-.3.4-.9.4-1.2.1z"></path>
               </svg>
             </li>
             <li class="breadcrumb-item active">
@@ -30,7 +45,7 @@
 <div class="wishlist text-right" dir="rtl">
   <div class="container wishlist-container">
 
-    <table class="wishlist">
+    <table class="wishlist" *ngIf="wishList.length > 0">
       <thead class="wishlist-head">
       <tr class="wishlist-row">
         <th class="wishlist-column wishlist-column-image text-center">
@@ -50,34 +65,37 @@
       </tr>
       </thead>
       <tbody class="wishlist-body">
-      <tr class="wishlist-row">
+      <tr class="wishlist-row" *ngFor="let item of wishList">
         <td class="wishlist-column wishlist-column-image">
-          <div class="d-block mx-auto product-image"><a
-            href=""
-            class="product-image-body">
-            <img
-              src="/assets/bootstrap/img/pic2.jpg" alt="" class="product-image-img"></a></div>
+          <div class="d-block mx-auto product-image">
+            <a [routerLink]="['detail',item._id]"  class="product-image-body">
+              <img [src]="item.image" alt="" class="product-image-img">
+            </a>
+          </div>
         </td>
         <td class="wishlist-column wishlist-column-product">
-          <a href="" class="wishlist-product-name">
-            گوشی موبایل
+          <a [routerLink]="['detail',item._id]" class="wishlist-product-name">
+            {{item.title}}
           </a>
         </td>
         <td class="wishlist-column wishlist-column-stock">
-          <div class="badge badge-success">
+          <div class="badge badge-success" *ngIf="item.count !== '0'">
             موجود
+          </div>
+          <div class="badge badge-danger" *ngIf="item.count === '0'">
+            نا موجود
           </div>
         </td>
         <td class="wishlist-column wishlist-column-price">
-          5,200,000 تومان
+          {{item.price}} تومان
         </td>
         <td class="wishlist-column wishlist-column-tocart">
-          <button type="button" class="btn btn-primary">
+          <button (click)="addToCart(item,item['Inventory'][0].count)" type="button" class="btn btn-primary">
             اضافه به سبد خرید
           </button>
         </td>
         <td class="wishlist-column wishlist-column-remove">
-          <button type="button" aria-label="Remove" class="btn btn-remove">
+          <button (click)="delete(item._id)" type="button" aria-label="Remove" class="btn btn-remove">
             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" class="">
               <path
                 d="M10.8 10.8c-.4.4-1 .4-1.4 0L6 7.4l-3.4 3.4c-.4.4-1 .4-1.4 0-.4-.4-.4-1 0-1.4L4.6 6 1.2 2.6c-.4-.4-.4-1 0-1.4.4-.4 1-.4 1.4 0L6 4.6l3.4-3.4c.4-.4 1-.4 1.4 0 .4.4.4 1 0 1.4L7.4 6l3.4 3.4c.4.4.4 1 0 1.4z"></path>
@@ -88,6 +106,13 @@
       </tbody>
     </table>
 
+    <p class="py-3 text-center" *ngIf="localStorage.userData !== null && wishList.length === 0">
+      لیست علاقه مندی های شما خالی است.
+    </p>
+
+    <p class="py-3 text-center" *ngIf="localStorage.userData === null">
+      لطفا ابتدا <a routerLink="/home/account">وارد</a> سایت شوید.
+    </p>
   </div>
 </div>
 <app-footer></app-footer>
