--- a/src/app/Layout/slider/slider.component.html
+++ b/src/app/Layout/slider/slider.component.html
@@ -21,6 +21,12 @@
         <ng-template carouselSlide>
           <img src="./assets/bootstrap/img/banner/banner5.png" alt="first slide" class="slider-image">
         </ng-template>
+        <ng-template carouselSlide>
+          <img src="./assets/bootstrap/img/banner/banner6.png" alt="first slide" class="slider-image">
+        </ng-template>
+        <ng-template carouselSlide>
+          <img src="./assets/bootstrap/img/banner/banner7.png" alt="first slide" class="slider-image">
+        </ng-template>
       </owl-carousel-o>
       <!--    <carousel style="border-radius: 20px">-->
       <!--      <slide>-->
