--- a/src/app/Layout/index/index.component.html
+++ b/src/app/Layout/index/index.component.html
@@ -4,6 +4,7 @@
 <app-home-feature></app-home-feature>
 <!--<app-feature></app-feature>-->
 <app-banner></app-banner>
+<app-offers></app-offers>
 <app-discount></app-discount>
 <app-gift></app-gift>
 <app-best-selling></app-best-selling>
