--- a/src/app/Layout/slider/slider.component.html
+++ b/src/app/Layout/slider/slider.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid mt-4">
   <div class="row slider" dir="rtl">
-    <div class="col-sm-12 col-lg-8">
+    <div class="col-sm-12 col-md-8 col-lg-8">
 
       <owl-carousel-o [options]="customOptions" dir="ltr" style="border-radius: 20px">
         <ng-template carouselSlide>
@@ -48,12 +48,12 @@
       <!--      </slide>-->
       <!--    </carousel>-->
     </div>
-    <div class="col-sm-12 col-lg-4">
+    <div class="col-sm-12 col-md-4 col-lg-4">
       <div class="row">
-        <div class="col-sm-6 col-lg-12">
+        <div class="col-sm-6 col-md-12 col-lg-12">
           <img src="./assets/bootstrap/img/banner/image-side1.jpg" class="image-box">
         </div>
-        <div class="col-sm-6 col-lg-12 mt-2">
+        <div class="col-sm-6 col-md-12 col-lg-12 mt-2">
           <img src="./assets/bootstrap/img/banner/image-side2.jpg" class="image-box">
         </div>
       </div>
