--- a/src/app/SharedComponent/header/middle-header/middle-header.component.html
+++ b/src/app/SharedComponent/header/middle-header/middle-header.component.html
@@ -9,7 +9,7 @@
     </a>
   </div>
   <div class="site-header__search">
-    <div style="margin:auto; width: 70%; margin-top: 30px;">
+    <div style="margin:auto; width: 70%;">
       <app-search-bar (onSelectedOption)="onSelectedFilter($event)"></app-search-bar>
     </div>
 
