--- a/src/app/Layout/index/index.component.css
+++ b/src/app/Layout/index/index.component.css
@@ -2,3 +2,23 @@
   background-color: #F6F6F6;
 }
 
+:host ::ng-deep .p-toast .p-toast-message .p-toast-message-content .p-toast-message-text{
+  margin: 0 1rem 0 0!important;
+}
+:host ::ng-deep .p-toast .p-toast-message.p-toast-message-error {
+  border-width: 0 6px 0 0px!important;
+}
+:host ::ng-deep .p-toast .p-toast-message.p-toast-message-success {
+  border-width: 0 6px 0 0px!important;
+}
+:host ::ng-deep .p-button-icon-left {
+  margin-left: 0.5rem;
+  margin-right: unset;
+}
+:host ::ng-deep .p-dialog .p-dialog-footer {
+  text-align: left;
+}
+:host ::ng-deep .p-dialog.p-confirm-dialog .p-confirm-dialog-message {
+  margin-right: 1rem;
+  margin-left: unset!important;
+}
