--- a/src/app/Layout/seller/seller-login/seller-login.component.html
+++ b/src/app/Layout/seller/seller-login/seller-login.component.html
@@ -63,7 +63,7 @@
                   </span>
                 </div>
                 <div class="col-4 text-left">
-                  <a routerLink="/home/seller/register">ثبت نام کنید</a>
+                  <a routerLink="/sellerBe/register">ثبت نام کنید</a>
                 </div>
 
 
