--- a/src/app/Core/dashboard-seller/index/index.component.css
+++ b/src/app/Core/dashboard-seller/index/index.component.css
@@ -95,6 +95,8 @@ button{
 }
 :host ::ng-deep .p-toast .p-toast-message .p-toast-message-content .p-toast-message-text{
   margin: 0 1rem 0 0!important;
+  text-align: right;
+  font-family: IRANSans_Bold;
 }
 :host ::ng-deep .p-toast .p-toast-message.p-toast-message-error {
   border-width: 0 6px 0 0px!important;
