--- a/src/app/Layout/product-detail/product-detail.component.css
+++ b/src/app/Layout/product-detail/product-detail.component.css
@@ -48,7 +48,7 @@ input[type=radio] {
 }
 
 input[type=radio]:checked + label{
-  border: 3px #EF2B2F solid;
+  border: 3px #cc3333 solid;
   width: 40px;
   height: 40px;
 }
@@ -65,7 +65,7 @@ input[type=radio]:checked + label{
 .price span{
   font-size: 14px;
   font-family: IRANSans_Bold;
-  color: #EF2B2F;
+  color: #cc3333;
   font-weight: bold;
 }
 
@@ -157,7 +157,7 @@ table tr td {
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 700;
-  background: #EF2B2F;
+  background: #cc3333;
   color: #fff;
   padding: 3px 10px;
   border-radius: 20px;
@@ -205,7 +205,7 @@ table tr td {
 }
 
 .product-details h4 a:hover {
-  color: #EF2B2F;
+  color: #cc3333;
 }
 
 .product-details p {
@@ -226,12 +226,12 @@ table tr td {
   width: 25%;
 }
 .product-bottom-details div.product-links i {
-  -webkit-text-stroke: 2px #EF2B2F;
+  -webkit-text-stroke: 2px #cc3333;
   -webkit-text-fill-color: transparent;
   margin-right: .25rem!important;
 }
 .product-bottom-details div.product-links i:hover {
-  -webkit-text-fill-color: #EF2B2F;
+  -webkit-text-fill-color: #cc3333;
 }
 .product-bottom-details div.product-price {
   float: left;
@@ -244,7 +244,7 @@ table tr td {
 }
 .product-price b {
   font-size: 15px;
-  color: #EF2B2F;
+  color: #cc3333;
   font-weight: 600;
 }
 .product-price small {
@@ -267,7 +267,7 @@ table tr td {
 }
 
 .product-links a:hover {
-  color: #EF2B2F;
+  color: #cc3333;
 }
 .button {
   positive:relative;
@@ -279,7 +279,7 @@ table tr td {
 
 button {
   border: none;
-  background: #EF2B2F;
+  background: #CC3333;
   color: #ffffff;
   padding: 10px 35px;
   font-size: 16px;
@@ -288,9 +288,6 @@ button {
   box-sizing: border-box;
   transition: all 500ms ease;
   overflow:hidden;
-}
-button:hover {
-  box-shadow: 1px 1px 10px #777;
 }
 
 .owl-carousel .owl-item img {
@@ -354,7 +351,7 @@ mat-icon{
 }
 .product-tabs-item a.active, .product-tabs-item a:active, .product-tabs-item a:hover {
   background: transparent;
-  box-shadow: inset 0 -2px #EF2B2F;
+  box-shadow: inset 0 -2px #cc3333;
 }
 .product-tabs-item a {
   font-size: 16px;
@@ -434,7 +431,7 @@ label{
   text-align: justify;
   text-justify: inter-word;
   font-size: 12px;
-  color: #EF2B2F;
+  color: #cc3333;
 }
 :host::ng-deep.p-dialog .p-dialog-header {
   color: #777777!important;
@@ -545,7 +542,7 @@ label{
   fill: #CCCCCC;
 }
 .product-card__actions-list button:hover svg{
-  fill: #EF2B2F;
+  fill: #cc3333;
 }
 .product-card--layout--grid .product-card__fit .status-badge__text {
   display: none;
@@ -633,7 +630,7 @@ label{
   padding: 8px;
   border-radius: 2px;
   background: transparent;
-  color: #EF2B2F;
+  color: #cc3333;
   z-index: 0;
   transition: color .2s;
 }
@@ -653,7 +650,7 @@ label{
 }
 .product-card .product-card__addtocart-icon svg {
   display: block;
-  fill: #EF2B2F;
+  fill: #cc3333;
 }
 
 .product-card--layout--grid:after {
@@ -696,7 +693,7 @@ img.image__tag {
   font-family: IRANSans_Bold;
 }
 .tag-badge--sale:before {
-  background: #EF2B2F;
+  background: #cc3333;
 }
 .tag-badge:before {
   content: "";
@@ -723,7 +720,7 @@ img.image__tag {
 .product-card:active .product-card__addtocart-icon:before,
 .product-card:hover .product-card__addtocart-icon:before {
   transform: scale(1);
-  background: #EF2B2F;
+  background: #cc3333;
   background-image: initial;
   background-position-x: initial;
   background-position-y: initial;
@@ -739,7 +736,7 @@ img.image__tag {
   fill: #ffffff!important;
 }
 :host ::ng-deep .product-card__actions-list button:hover svg path {
-  fill: #EF2B2F!important;
+  fill: #cc3333!important;
 }
 .arrow__button {
   height: 23px;
