--- a/src/app/Layout/product-detail/product-detail.component.html
+++ b/src/app/Layout/product-detail/product-detail.component.html
@@ -1,19 +1,22 @@
 <app-header dir="rtl"></app-header>
-<p-dialog  [(visible)]="displayBasic" [style]="{width: '30rem'}" [baseZIndex]="10000" dir="rtl">
+<p-dialog [(visible)]="displayBasic" [style]="{width: '30rem'}" [baseZIndex]="10000" dir="rtl">
   <p-header>
-    <p  class="mr-3">انجام شد</p>
+    <p class="mr-3">انجام شد</p>
   </p-header>
   <hr style="width: 100%;"/>
   <p class="text-right text-success mt-2">محصول با موفقیت به سبد خرید اضافه شد</p>
-  <p class="text-right textDialog">برای ثبت نهایی سفارش بر روی دکمه ی مشاهده  سبد خرید کلیک کنید و برای افزودن دیگر محصولات به سبد خرید، بر روی دکمه ی ادامه کلیک کنید.</p>
+  <p class="text-right textDialog">برای ثبت نهایی سفارش بر روی دکمه ی مشاهده سبد خرید کلیک کنید و برای افزودن دیگر
+    محصولات به سبد خرید، بر روی دکمه ی ادامه کلیک کنید.</p>
   <hr style="margin-bottom: -15px"/>
-  <ng-template pTemplate="footer" >
-    <button pButton pRipple type="button"  (click)="displayBasic=false" label="ادامه"  class="p-button-danger float-left"></button>
-    <button pButton pRipple type="button"  (click)="goCart()" label="مشاهده سبد خرید"  class="p-button-danger float-left"></button>
+  <ng-template pTemplate="footer">
+    <button pButton pRipple type="button" (click)="displayBasic=false" label="ادامه"
+            class="p-button-danger float-left"></button>
+    <button pButton pRipple type="button" (click)="goCart()" label="مشاهده سبد خرید"
+            class="p-button-danger float-left"></button>
 
   </ng-template>
 </p-dialog>
-
+<p-toast position="center"></p-toast>
 
 <div class="page-header text-right mt-5" dir="rtl">
   <div class="page-header-container container-fluid">
@@ -26,7 +29,8 @@
                 صفحه اصلی
               </a>
               <svg xmlns="http://www.w3.org/2000/svg" width="6" height="9" class="breadcrumb-arrow">
-                <path d="M.4 8.8c-.4-.4-.5-1-.1-1.4l3-2.9-3-2.9C-.1 1.2-.1.5.4.2c.4-.3.9-.3 1.3.1L6 4.5 1.6 8.7c-.3.4-.9.4-1.2.1z"></path>
+                <path
+                  d="M.4 8.8c-.4-.4-.5-1-.1-1.4l3-2.9-3-2.9C-.1 1.2-.1.5.4.2c.4-.3.9-.3 1.3.1L6 4.5 1.6 8.7c-.3.4-.9.4-1.2.1z"></path>
               </svg>
             </li>
             <li class="breadcrumb-item">
@@ -34,7 +38,8 @@
                 {{category['title']}}
               </a>
               <svg xmlns="http://www.w3.org/2000/svg" width="6" height="9" class="breadcrumb-arrow">
-                <path d="M.4 8.8c-.4-.4-.5-1-.1-1.4l3-2.9-3-2.9C-.1 1.2-.1.5.4.2c.4-.3.9-.3 1.3.1L6 4.5 1.6 8.7c-.3.4-.9.4-1.2.1z"></path>
+                <path
+                  d="M.4 8.8c-.4-.4-.5-1-.1-1.4l3-2.9-3-2.9C-.1 1.2-.1.5.4.2c.4-.3.9-.3 1.3.1L6 4.5 1.6 8.7c-.3.4-.9.4-1.2.1z"></path>
               </svg>
             </li>
             <li class="breadcrumb-item">
@@ -42,7 +47,8 @@
                 {{product['subCategory']}}
               </a>
               <svg xmlns="http://www.w3.org/2000/svg" width="6" height="9" class="breadcrumb-arrow">
-                <path d="M.4 8.8c-.4-.4-.5-1-.1-1.4l3-2.9-3-2.9C-.1 1.2-.1.5.4.2c.4-.3.9-.3 1.3.1L6 4.5 1.6 8.7c-.3.4-.9.4-1.2.1z"></path>
+                <path
+                  d="M.4 8.8c-.4-.4-.5-1-.1-1.4l3-2.9-3-2.9C-.1 1.2-.1.5.4.2c.4-.3.9-.3 1.3.1L6 4.5 1.6 8.7c-.3.4-.9.4-1.2.1z"></path>
               </svg>
             </li>
 
@@ -58,20 +64,17 @@
     </div>
   </div>
 </div>
-
 <div class="container-fluid text-right" dir="rtl">
   <div class="row">
     <div class="col-sm-12">
       <div class="row">
         <div class="col-sm-12 col-lg-5 col-lg-5">
           <div class="box d-block mx-auto">
-
             <p-galleria [value]="images" [responsiveOptions]="responsiveOptions"
                         [containerStyle]="{'max-width': '660px', 'margin-top':'2em'}" [numVisible]="5"
                         dir="ltr" thumbnailsPosition="bottom" [autoPlay]="true" [transitionInterval]="2000"
                         [circular]="true" [showItemNavigators]="true" [showItemNavigatorsOnHover]="true">
               <ng-template pTemplate="item" let-item>
-<!--                <img [src]="item.previewImageSrc" style="width: 100%; display: block;"/>-->
                 <lib-ngx-image-zoom
                   [thumbImage]=item.thumbnailImageSrc
                   [fullImage]=item.previewImageSrc
@@ -82,7 +85,6 @@
                   [lensWidth]="100">
                 </lib-ngx-image-zoom>
               </ng-template>
-
               <ng-template pTemplate="thumbnail" let-item>
                 <div class="p-grid p-nogutter p-justify-center">
                   <img [src]="item.thumbnailImageSrc" style="width: 100px;height: 100px; display: block;"/>
@@ -90,7 +92,6 @@
               </ng-template>
 
             </p-galleria>
-
           </div>
         </div>
         <div class="col-sm-12 col-lg-7">
@@ -100,7 +101,8 @@
                 <h2>{{product['title']}}</h2>
               </div>
               <div class="col-sm-6 align-items-center text-left">
-                <a><i class="fa fa-heart fa-2x" pTooltip="افزودن به لیست علاقه مندی ها" tooltipPosition="bottom"></i></a>
+                <a><i class="fa fa-heart fa-2x" (click)="addToWishList(productID)"
+                      pTooltip="افزودن به لیست علاقه مندی ها" tooltipPosition="bottom"></i></a>
                 <a><i class="fa fa-share-alt fa-2x" pTooltip="اشتراک گذاری" tooltipPosition="bottom"></i></a>
               </div>
             </div>
@@ -112,7 +114,7 @@
                   <span>4.2</span>
 
                   <label class="mr-5">تعداد دیدگاه</label>
-                  <span>1</span>
+                  <span>{{commentsCount}}</span>
                 </p>
                 <p>
                   <label>دسته بندی: </label>
@@ -121,18 +123,11 @@
               </div>
               <div class="col-sm-12 col-md-6 align-items-center">
                 <label>ویژگی های محصول</label>
-<!--                <ul>-->
-<!--                  <li>تایید شده توسط متخصصین</li>-->
-<!--                  <li>ماندگاری بالا و طولانی مدت</li>-->
-<!--                  <li>ضد آب</li>-->
-<!--                </ul>-->
                 <div style="color: #777777;text-align: justify" [innerHTML]="product['briefFeature']">
-
                 </div>
               </div>
             </div>
             <div class="row color no-gutters">
-
               <div class="col-sm-12 col-md-6 align-items-start">
 
                 <input checked="checked" id="white" name="color" type="radio" value="white">
@@ -156,8 +151,8 @@
               <div class="col-sm-6 align-items-center text-left">
                 <p>
                   <label>موجودی انبار: </label>
-                  <span *ngIf="InventoryState">{{Inventory['count']}}</span>
-                   <span *ngIf="!InventoryState">موجود نمی باشد</span>
+                  <span *ngIf="InventoryState">{{product['count']}}</span>
+                  <span *ngIf="!InventoryState">موجود نمی باشد</span>
                 </p>
               </div>
               <div class="col-sm-6 align-items-center">
@@ -208,36 +203,40 @@
 
           </div>
           <div aria-labelledby="pills-comment-tab" class="tab-pane fade" id="pills-comment" role="tabpanel">
-            <div class="row justify-content-center comment">
+            <div class="row justify-content-center comment pt-3"
+                 *ngFor="let comment of comments">
               <div class="col-2 align-items-center">
-                <h3>کاربر به قیمت</h3>
-                <p>در تاریخ 20 آبان 1399</p>
+                <h3>{{comment.userName}}</h3>
+                <p>{{comment.id}}</p>
               </div>
               <div class="col-10 align-items-center">
-                <div class="row justify-content-center">
-                  <div class="col-11 align-items-center">
-                    <h4>خوب بود</h4>
-                    <p>ظاهرش خوبه اما هنوز استفاده نکردم</p>
-                  </div>
-                  <div class="col-1 align-items-center text-left">
-                    <a> 15 <i class="fa fa-thumbs-o-up mr-2"></i></a>
-                  </div>
-                </div>
+                <p>{{comment.commentText}}</p>
               </div>
             </div>
-
+            <div class="row justify-content-center comment" *ngIf="comments.length == 0">
+              <div class="col-12 align-items-center text-center">
+                <p>هیچ نظری ثبت نشده است.</p>
+              </div>
+            </div>
             <div class="row justify-content-center mt-4">
-              <div class="col-8">
-                <form>
-                  <div class="form-group">
-                    <label>عنوان نظر شما</label>
-                    <input type="text" class="form-control">
-                  </div>
+              <div class="col-sm-12 col-lg-8">
+                <form [formGroup]="form" (ngSubmit)="addComment()">
                   <div class="form-group">
                     <label>متن نظر شما (اجباری)</label>
-                    <textarea class="form-control"></textarea>
+                    <textarea class="form-control" formControlName="commentText"></textarea>
+
+                    <ul class="mt-1 text-right list-inline"
+                        *ngFor="let error of errorMessages.commentText">
+                      <li class="font-small text-danger font-weight-bold list-inline-item"
+                          *ngIf="form.get('commentText').hasError(error.type)
+                            && (form.get('commentText').dirty
+                            || form.get('commentText').touched)">
+                        {{ error.message }}
+                      </li>
+                    </ul>
                   </div>
-                  <button type="submit" class="btn mx-auto d-block text-white">ثبت نظر</button>
+                  <button type="submit" class="btn mx-auto d-block text-white" [disabled]="form.invalid">ثبت نظر
+                  </button>
                 </form>
               </div>
             </div>
@@ -248,8 +247,6 @@
     </div>
   </div>
 </div>
-
-
 
 <div class="container-fluid" dir="rtl">
   <div class="row justify-content-center">
@@ -271,13 +268,17 @@
                 <button class="product-card__action product-card__action--quickview" type="button"
                         aria-label="Quick view">
                   <svg width="16" height="16">
-                    <path d="M14,15h-4v-2h3v-3h2v4C15,14.6,14.6,15,14,15z M13,3h-3V1h4c0.6,0,1,0.4,1,1v4h-2V3z M6,3H3v3H1V2c0-0.6,0.4-1,1-1h4V3zM3,13h3v2H2c-0.6,0-1-0.4-1-1v-4h2V13z"></path>
+                    <path
+                      d="M14,15h-4v-2h3v-3h2v4C15,14.6,14.6,15,14,15z M13,3h-3V1h4c0.6,0,1,0.4,1,1v4h-2V3z M6,3H3v3H1V2c0-0.6,0.4-1,1-1h4V3zM3,13h3v2H2c-0.6,0-1-0.4-1-1v-4h2V13z"></path>
                   </svg>
                 </button>
-                <button class="product-card__action product-card__action--wishlist" type="button"
+                <button class="product-card__action product-card__action--wishlist"
+                        (click)="addToWishList(i._id)"
+                        type="button"
                         aria-label="Add to wish list">
                   <svg width="16" height="16">
-                    <path d="M13.9,8.4l-5.4,5.4c-0.3,0.3-0.7,0.3-1,0L2.1,8.4c-1.5-1.5-1.5-3.8,0-5.3C2.8,2.4,3.8,2,4.8,2s1.9,0.4,2.6,1.1L8,3.7l0.6-0.6C9.3,2.4,10.3,2,11.3,2c1,0,1.9,0.4,2.6,1.1C15.4,4.6,15.4,6.9,13.9,8.4z"></path>
+                    <path
+                      d="M13.9,8.4l-5.4,5.4c-0.3,0.3-0.7,0.3-1,0L2.1,8.4c-1.5-1.5-1.5-3.8,0-5.3C2.8,2.4,3.8,2,4.8,2s1.9,0.4,2.6,1.1L8,3.7l0.6-0.6C9.3,2.4,10.3,2,11.3,2c1,0,1.9,0.4,2.6,1.1C15.4,4.6,15.4,6.9,13.9,8.4z"></path>
                   </svg>
                 </button>
                 <button class="product-card__action product-card__action--compare" type="button"
@@ -293,7 +294,7 @@
               </div>
               <div class="product-card__image">
                 <div class="image image--type--product">
-<!--                  [routerLink]="['/home/detail',i['_id']]"-->
+                  <!--                  [routerLink]="['/home/detail',i['_id']]"-->
                   <a (click)="goDetail(i['_id'])" class="image__body">
                     <img class="image__tag" [src]="i['image']" alt="">
                   </a>
@@ -310,12 +311,12 @@
                 </div>
               </div>
               <div class="product-card__footer">
-                             <div class="product-card__prices">
+                <div class="product-card__prices">
                   <div class="product-card__price product-card__price--old">
                     {{i['price']|number}}
                   </div>
                   <div class="product-card__price product-card__price--new text-danger">
-                    {{i['price']-(i['price']*i['offerPercent'])/100|number}}  تومان
+                    {{i['price'] - (i['price'] * i['offerPercent']) / 100|number}}  تومان
                   </div>
                 </div>
               </div>
@@ -326,11 +327,11 @@
     </owl-carousel-o>
   </div>
 </div>
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)"
-             size = "large"
-             color = "#fff"
-             type = "ball-fussion"
-             [fullScreen] = "true">
-  <p style="color: white" >منتظر بمانید   ...</p>
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)"
+             size="large"
+             color="#fff"
+             type="ball-fussion"
+             [fullScreen]="true">
+  <p style="color: white">منتظر بمانید</p>
 </ngx-spinner>
 <app-footer></app-footer>
