--- a/src/app/Layout/seller/seller-register/seller-register.component.html
+++ b/src/app/Layout/seller/seller-register/seller-register.component.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid" dir="rtl">
   <div class="row pb-3 justify-content-center seller-login">
-    <div class="col-sm-12 align-items-center">
+    <div class="col-sm-12 col-md-8 align-items-center">
       <div class="row mt-5 justify-content-center text-center">
         <div class="col-sm-12 col-md-8">
           <h2>
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="col-12 text-right">
-                  <a routerLink="/home/seller/login">قبلا ثبت نام کرده اید؟</a>
+                  <a routerLink="/sellerBe/login">قبلا ثبت نام کرده اید؟</a>
                 </div>
 
                 <div class="col-md-12 col-lg-12 pt-4">
